# physiome-omex-utils

./: .gitignore  README.md  create_omex_archive.py  omex_manifest_maker.py  pyproject.toml  requirements.txt  validate_combine_archive.py
submission_files/Ai2021PhysiomeS000009/: manifest.xml
submission_files/Ai2021PhysiomeS000009/Simulation/: Fig11_plot.py  Fig13_plot.py  Fig2_plot.py  Fig2_sim.py  Fig3_plot.py  Fig4_plot.py  Fig5_plot.py  Fig6_plot.py  Fig6_sim.py  Fig8_plot.py  Patch_clampXi_experiment.sedml  simFig10_0.csv  simFig10_1.csv  simFig10_2.csv  simFig10_3.csv  simFig10_4.csv  simFig10_5.csv  simFig11_0.csv  simFig2_0.csv  simFig2_1.csv  simFig3_0.csv  simFig3_1.csv  simFig4.csv  simFig5a.csv  simFig5b.csv  simFig6_0.csv  simFig6_1.csv
submission_files/S000006/: manifest.xml
submission_files/S000007/: manifest.xml
submission_files/S000007/Code/: Adjustable_parameters_table_rest.xlsx  Adjustable_parameters_table_swap.xlsx  CardiovascularMechanics.m  EnergeticsModelScript.m  dXdT_cardiovascular_mechanics.m
submission_files/S000010/: Afshar2021PhysiomeS0000010.omex
submission_files/S000010/Afshar2021PhysiomeS0000010/: Figure1.py  Figure2.py  Figure3.py  Figure4.cellml  Figure4.py  Figure4.sedml  Figure5.py  Figure6.py  Figure7.py  HumanSAN_Fabbri_Fantini_Wilders_Severi_2017.sedml  new_manifest.xml
submission_files/S000010/Afshar2021PhysiomeS0000010old/: Figure1.py  Figure2.py  Figure3.py  Figure4.py  Figure5.py  Figure6.py  Figure7.py  HumanSAN_Fabbri_Fantini_Wilders_Severi_2017.cellml  manifest.xml
